# ml-zoomcamp-2025

01-intro/: 01-intro-homework.ipynb
02-regression/: 02-regression-homework.ipynb
03-classification/: 03-classification-homework.ipynb
04-evaluation/: 04-evaluation-homework.ipynb
05-deployment/: 05-deployment-homework.ipynb
05-deployment/05-deployment-homework/: Dockerfile  main.py  pyproject.toml  question3_predict.py  question4_predict.py  question4_test.py  question6_predict.py  question6_test.py
06-trees/: 06-trees-homework.ipynb
07-deep-learning/: 07-deep-learning-homework.ipynb  cuda installation notes.txt.txt
08-serverless/: 08-serverless-homework.ipynb
08-serverless/08-serverless-homework/: 08-serverless-homework.py  Dockerfile  lambda_function.py  test.py
09-kubernetes/: 09-kubernetes-homework.ipynb
midterm-project/: README.md  modeling.ipynb
midterm-project/production/: Dockerfile  README copy.md  predict.py  pyproject.toml  record_for_inference.csv  serve.py  train.py
midterm-project/production/data/: insulin_dosage_prediction.csv
